--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <footer>
-        Made with ❤️ @Amiya Chaturvedi.
+        Made with ❤️ <a href="https://github.com/AmiyaChaturvedi">@Amiya Chaturvedi.</a>
     </footer>
 
     <script src="index.js"></script>
